[metadata]
name = livefs-edit
version = 0.0.3
author = Michael Hudson-Doyle
author_email = michael.hudson@ubuntu.com
description = Tools for modifying Ubuntu Live ISOs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mwhudson/livefs-edit
project_urls =
    Bug Tracker = https://github.com/mwhudson/livefs-edit/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    livefs-edit = livefs_edit:__main__

